fix(plugins/plugin-patternfly4-themes): StatusStripe dropdowns have low contrast in PatternFly4 Dark theme
Fixes #6717

--- a/plugins/plugin-patternfly4-themes/web/scss/patternfly4-dark.scss
+++ b/plugins/plugin-patternfly4-themes/web/scss/patternfly4-dark.scss
@@ -54,7 +54,7 @@ body.kui--patternfly4[kui-theme='PatternFly4 Dark'][kui-theme-style] {
   --color-yellow-sidecar: var(--pf-global--palette--gold-200);
   --color-green-sidecar: var(--pf-global--palette--green-200);
 
-  --color-dropdown: var(--color-base06);
+  --color-dropdown: var(--pf-global--palette--black-700);
 
   @include charts-dark;
   @include patternfly-sidecar;
